--- a/palo2/index.html
+++ b/palo2/index.html
@@ -21,7 +21,7 @@
     <!-- <script src="p2.renderer.min.js"></script> -->
     <!-- <script src="/socket.io/socket.io.js"></script> -->
     <!-- <script defer src="/socket.io.slim.js"></script> -->
-    <script defer src="bundle.js" target="game1" width="*" height="*" option="0"></script>
+    <script defer src="bundle.min.js" target="game1" width="*" height="*" option="0"></script>
     <!-- <script defer src="bundle.js" target="game1" width="360" height="640" option="0"></script> -->
     <!-- <script defer src="bundle.js" target="game1" option="0"></script> -->
     <!-- <script defer src="/bundle.js" target="game2" width="360" height="640" option="0"></script> -->
