--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <h3 id="dungeonkim-s-github-page">dungeonkim&#39;s github page</h3>
 <h2 id="-">삭제되었수다!</h2>
-<p><img src="dungeonkim.github.io/palo2/screenshot.png" alt="삭제되었수다">
+<p><img src="https://dungeonkim.github.io/palo2/screenshot.png" alt="삭제되었수다">
     1997년 하이텔 100K바이트 게임 공모전 대상 수상<br>
     1, 2인용 슈팅게임<br>
     PC나 모바일에서 플레이할 수 있습니다.</p>
@@ -9,5 +9,5 @@
     <li>1P - 화살표키, N,M</li>
     <li>2P - WASD,Z,X</li>
 </ul>
-<p><a href="dungeonkim.github.io/palo2">게임시작</a></p>
+<p><a href="https://dungeonkim.github.io/palo2">게임시작</a></p>
 </html>
