--- a/palo2/index.html
+++ b/palo2/index.html
@@ -6,6 +6,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dungeonkim.github.io/palo2" />
     <meta property="og:image" content="https://dungeonkim.github.io/palo2/screenshot.png" />
+    <meta property="og:description" content="1997년 하이텔100K바이트 공모전 출품작. 그라디우스를 패러디한 파로디우스의 패러디인 85되었수다의 후속작"
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="max-age=1200" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="fonts.css">
