--- a/avalonika/index.html
+++ b/avalonika/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <canvas name="game1" style="overflow:hidden;width:100%;height:100%;border:0px solid; margin:0px; background: #13f;"></div>
-    <script defer src="render.js" target="game1" width="*" height="*" option="0"></script>
+    <script defer src="render.min.js" target="game1" width="*" height="*" option="0"></script>
 </body>
 </html>
 
